update Readme and env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-API_KEY=APIKEY of http://dataservice.accuweather.com/
+API_KEY=APIKEY of https://developer.accuweather.com/
 API_URL=http://dataservice.accuweather.com/
 #API_URL=http://127.0.0.1:8000
 
