--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
             - MYSQL_USERNAME=mysql
             - MYSQL_PASSWORD=mysql
             - MYSQL_PORT=3307
-#        ports:
-#            - "80:8080"
+        ports:
+            - "80:5000"
         volumes:
             - .:/var/www
 
